graphe qui s affiche sur la vue et qui est fonctionnel proprement + on peut charger un fichier txt en plus