@@ -15,6 +15,20 @@
     </properties>
 
     <dependencies>
+
+
+        <dependency>
+            <groupId>org.openjfx</groupId>
+            <artifactId>javafx-controls</artifactId>
+            <version>22.0.1</version>
+        </dependency>
+        <dependency>
+            <groupId>org.graphstream</groupId>
+            <artifactId>gs-core</artifactId>
+            <version>2.0</version>
+        </dependency>
+
+        <!-- Dépendance pour JavaFX Controls (si ce n'est pas déjà inclus) -->
         <dependency>
             <groupId>org.openjfx</groupId>
             <artifactId>javafx-controls</artifactId>
@@ -85,6 +99,16 @@
                 <configuration>
                     <source>22</source>
                     <target>22</target>
+                </configuration>
+            </plugin>
+
+            <plugin>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <configuration>
+                    <compilerArgs>
+                        <arg>--add-modules</arg>
+                        <arg>javafx.graphics</arg>
+                    </compilerArgs>
                 </configuration>
             </plugin>
             <plugin>
